# HFT_System

./: CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  GUI_INSTALL.md  GUI_VISUALIZATION_GUIDE.md  Info.plist.in  MOMENTUM_STRATEGY_GUIDE.md  Makefile  README.md  REDDIT_POST.md  build_gui.sh  cmake_install.cmake  nanoex  nanoex.cpp  nanoex_gui.cpp  run_gui.sh
.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
NanoEX HFT System.app/Contents/: Info.plist
examples/: momentum_strategy_example.cpp
nanoex_autogen/: deps  moc_predefs.h
nanoex_gui_autogen/: deps  mocs_compilation.cpp
nanoex_gui_autogen/UVLADIE3JM/: moc_chart_widget.cpp  moc_chart_widget.cpp.d
nanoex_gui_autogen/include/: nanoex_gui.moc  nanoex_gui.moc.d
src/: chart_widget.cpp  chart_widget.h  indicators.cpp  indicators.h  main.cpp  market_data.cpp  market_data.h  matching_engine.cpp  matching_engine.h  order_book.cpp  order_book.h  performance.cpp  performance.h  risk.cpp  risk.h  strategy.cpp  strategy.h  threading.cpp  threading.h
